<resources>
    <string name="app_name">AndroidLabs2020W</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="HintText">Type here</string>
    <string name="TopText">Look at my GUI</string>
    <string name="ButtonText2">CLICK HERE</string>
    <string name="CheckBoxText">Check this out!</string>
    <string name="SwitchText">Switch on / off</string>
    <string name="toast_message">Here is more information</string>
    <string name="emailTextViewLab3">Enter your email address:</string>
    <string name="emailEditTextLab3">Type email here</string>
    <string name="passwordTextViewLab3">Type your password:</string>
    <string name="passwordEditTextLab3"></string>
    <string name="prefEmail">EmailAddress</string>

</resources>
